Updated resume for McDonalds

--- a/Daniel_Dong_Resume_Software_Engineer.tex
+++ b/Daniel_Dong_Resume_Software_Engineer.tex
@@ -129,7 +129,7 @@
     \resumeProjectHeading
         {\textbf{Web Developer} $|$ \emph{CGCW} $|$ {Novi, MI}}{January 2024 - April 2024}
         \resumeItemListStart
-            \resumeItem{Developed member registration tools using \textbf{C\#} within an \textbf{ASP.NET MVC} architecture}
+            \resumeItem{Built member registration tools in \textbf{C\#} and \textbf{ASP.NET MVC}, emphasizing \textbf{SOLID principles} and separation of concerns to ensure clean, extensible architecture}
             \resumeItem{Designed a normalized SQL schema and integrated it with a Data Access Layer using \textbf{Entity Framework} and \textbf{Repository Patterns} for scalable, type-safe database operations}
             \resumeItem{Integrated a \textbf{Vue.js} frontend with backend \textbf{RESTful APIs}, enabling real-time form validation and improving registration usability}
         \resumeItemListEnd
@@ -146,16 +146,15 @@
     \resumeProjectHeading
         {\textbf{Software Engineer Intern} $|$ \emph{Altair Engineering} $|$ {Irvine, California}}{May 2022 - August 2022}
           \resumeItemListStart
-            \resumeItem{Cleaned up thousands of Fortran77 and Fortran90 files by developing automated Python scripts to reduce errors, enhance codebase cleanliness, and increase development efficiency}
-            \resumeItem{Streamlined complex Fortran declarations/subroutines, replaced deprecated functions, and removed unused variables with scripts, earning recognition from the HyperWorks Core Development team}
+            \resumeItem{Developed automated Python scripts to refactor thousands of Fortran77/90 files—eliminating deprecated functions, unused variables, and syntax errors—to modernize the codebase and improve development efficiency}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 %-----------TECHINCAL SKILLS-----------
 \section{Technical Skills} 
-        \textbf{Languages:} \small C\#, Python, Java, C++,  JavaScript, TypeScript, SQL, HTML/CSS,  Kotlin
+        \textbf{Languages:} \small Python, C\#, JavaScript, HTML/CSS, SQL, Java, C++, TypeScript,  Kotlin
         \newline
-        \textbf{Frameworks:} \small .NET Core, Entity Framework, Django, React, Vue.js,  Node.js
+        \textbf{Frameworks:} \small .NET Core, Django, Entity Framework, React, Vue.js,  Node.js
         \newline
         \textbf{Tools/Platforms:} \small Git, AWS (EC2, S3, RDS, CloudFront), PostgreSQL, Supabase, SQLite, Linux, Visual Studio
 
