--- a/Daniel_Dong_Resume_Software_Engineer.tex
+++ b/Daniel_Dong_Resume_Software_Engineer.tex
@@ -150,21 +150,21 @@
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
-%-----------TECHINCAL SKILLS-----------
-\section{Technical Skills} 
-        \textbf{Languages:} \small Python, C\#, JavaScript, HTML/CSS, SQL, Java, C++, TypeScript,  Kotlin
-        \newline
-        \textbf{Frameworks:} \small .NET Core, Django, Entity Framework, React, Vue.js,  Node.js
-        \newline
-        \textbf{Tools/Platforms:} \small Git, AWS (EC2, S3, RDS, CloudFront), PostgreSQL, Supabase, SQLite, Linux, Visual Studio
-
-% %-----------.NET TECHINCAL SKILLS-----------
+% %-----------TECHINCAL SKILLS-----------
 % \section{Technical Skills} 
-%         \textbf{Languages:} \small C\#, TypeScript, JavaScript, SQL, Python, Java, C++, HTML/CSS, Kotlin
+%         \textbf{Languages:} \small Python, C\#, JavaScript, HTML/CSS, SQL, Java, C++, TypeScript,  Kotlin
 %         \newline
-%         \textbf{Frameworks:} \small .NET Core, Entity Framework, Django, React, Vue.js,  Node.js
+%         \textbf{Frameworks:} \small .NET Core, Django, Entity Framework, React, Vue.js,  Node.js
 %         \newline
-%         \textbf{Tools/Platforms:} \small Git, AWS (EC2, S3, RDS, CloudFront), Azure, PostgreSQL, SQLite, Linux, Visual Studio
+%         \textbf{Tools/Platforms:} \small Git, AWS (EC2, S3, RDS, CloudFront), PostgreSQL, Supabase, SQLite, Linux, Visual Studio
+
+%-----------.NET TECHINCAL SKILLS-----------
+\section{Technical Skills} 
+        \textbf{Languages:} \small C\#, JavaScript, SQL, Python, Java, TypeScript, C++, HTML/CSS, Kotlin
+        \newline
+        \textbf{Frameworks:} \small .NET Core, Entity Framework, Django, React, Vue.js,  Node.js
+        \newline
+        \textbf{Tools/Platforms:} \small Git, AWS (EC2, S3, RDS, CloudFront), Azure, PostgreSQL, SQLite, Linux, Visual Studio
 
 
 %-----------PROJECTS-----------
