Up Technical Skills

--- a/Daniel_Dong_Resume_Software_Engineer.tex
+++ b/Daniel_Dong_Resume_Software_Engineer.tex
@@ -160,11 +160,11 @@
 
 %-----------.NET TECHINCAL SKILLS-----------
 \section{Technical Skills} 
-        \textbf{Languages:} \small C\#, JavaScript, SQL, Python, Java, TypeScript, C++, HTML/CSS, Kotlin
+        \textbf{Languages:} \small C\#, JavaScript, SQL, HTML/CSS, Python, Java, TypeScript, C++, Kotlin
         \newline
         \textbf{Frameworks:} \small .NET Core, Entity Framework, Django, React, Vue.js,  Node.js
         \newline
-        \textbf{Tools/Platforms:} \small Git, AWS (EC2, S3, RDS, CloudFront), Azure, PostgreSQL, SQLite, Linux, Visual Studio
+        \textbf{Tools/Platforms:} \small Git, AWS (EC2, S3, RDS, CloudFront), Azure, PostgreSQL, SQLite, Moq, Linux, Visual Studio
 
 
 %-----------PROJECTS-----------
