Update Altair Intern Experience

--- a/Daniel_Dong_Resume_Software_Engineer.tex
+++ b/Daniel_Dong_Resume_Software_Engineer.tex
@@ -145,9 +145,10 @@
           
     \resumeProjectHeading
         {\textbf{Software Engineer Intern} $|$ \emph{Altair Engineering} $|$ {Irvine, California}}{May 2022 - August 2022}
-          \resumeItemListStart
-            \resumeItem{Developed automated Python scripts to refactor thousands of Fortran77/90 files—eliminating deprecated functions, unused variables, and syntax errors—to modernize the codebase and improve development efficiency}
-          \resumeItemListEnd
+        \resumeItemListStart
+            \resumeItem{Cleaned up thousands of Fortran77 and Fortran90 files by developing automated Python scripts to reduce errors, enhance codebase cleanliness, and increase development efficiency}
+            \resumeItem{Streamlined complex Fortran declarations/subroutines, replaced deprecated functions, and removed unused variables with scripts, earning recognition from the HyperWorks Core Development team}
+      \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 % %-----------TECHINCAL SKILLS-----------
