Add Mobile app to description

--- a/Daniel_Dong_Resume_Software_Engineer.tex
+++ b/Daniel_Dong_Resume_Software_Engineer.tex
@@ -171,7 +171,7 @@
 \section{Relevant Projects}
     \resumeSubHeadingListStart
         \resumeProjectHeading
-        {\textbf{RANKED – Offline-First Ranking App} $|$ \emph{React Native, TypeScript}}{}
+        {\textbf{RANKED – Offline-First Ranking Mobile App} $|$ \emph{React Native, TypeScript}}{}
         \resumeItemListStart
                 \resumeItem{Built a cross-platform mobile app for creating and managing custom rankings using \textbf{React Native}, with \textbf{Supabase} for authentication and cloud synchronization}
                 \resumeItem{Implemented an \textbf{offline-first architecture} with local \textbf{SQLite} storage as the primary data source and background sync for remote updates and conflict resolution}
