Add Specific Changes

--- a/Daniel_Dong_Resume_Software_Engineer.tex
+++ b/Daniel_Dong_Resume_Software_Engineer.tex
@@ -162,7 +162,7 @@
 \section{Technical Skills} 
         \textbf{Languages:} \small C\#, JavaScript, SQL, HTML/CSS, Python, Java, TypeScript, C++, Kotlin
         \newline
-        \textbf{Frameworks:} \small .NET Core, Entity Framework, Django, React, Vue.js,  Node.js
+        \textbf{Frameworks:} \small .NET Core, React, Entity Framework, Django, Vue.js, React Native, Node.js
         \newline
         \textbf{Tools/Platforms:} \small Git, AWS (EC2, S3, RDS, CloudFront), Azure, PostgreSQL, SQLite, Moq, Linux, Visual Studio
 
@@ -176,22 +176,22 @@
                 \resumeItem{Built a cross-platform mobile app for creating and managing custom rankings using \textbf{React Native}, with \textbf{Supabase} for authentication and cloud synchronization}
                 \resumeItem{Implemented an \textbf{offline-first architecture} with local \textbf{SQLite} storage as the primary data source and background sync for remote updates and conflict resolution}
                 \resumeItem{Ensured data consistency through \textbf{transaction-safe operations}, rank offset handling, and optimistic updates with automatic rollback on failure}
-        
         \resumeItemListEnd
-        \resumeProjectHeading
-              {\textbf{Multi-Threaded Network Fileserver} $|$ \emph{C++}}{}
-              \resumeItemListStart
-                \resumeItem{Engineered a network file server with socket programming for efficient client-server communication with  multiple clients}
-                \resumeItem{Implemented multi-threading to manage concurrent client requests with thread synchronization for high server responsiveness and effective resource allocation}
-                \resumeItem{Developed read, write, create, \& delete file system functionalities with crash consistent protocols to ensure data integrity}
-        \resumeItemListEnd
-        
+
         % \resumeProjectHeading
-        %       {\textbf{Reminisce - Travel Scrapbook App} $|$ \emph{Kotlin \& Python}}{}
+        %       {\textbf{Multi-Threaded Network Fileserver} $|$ \emph{C++}}{}
         %       \resumeItemListStart
-        %         \resumeItem{Developed a \textbf{Django}-based backend with \textbf{RESTful APIs}, integrating Google Maps, Spotify, and Weather APIs for improved user engagement with real-time route and weather trackers and music preferences}
-        %         \resumeItem{Optimized data exchange between a \textbf{Kotlin}-based \textbf{mobile application} and its backend by refining JSON structures and API endpoints, enhancing data retrieval speeds and enabling real-time updates for 100+ data points per user}
+        %         \resumeItem{Engineered a network file server with socket programming for efficient client-server communication with  multiple clients}
+        %         \resumeItem{Implemented multi-threading to manage concurrent client requests with thread synchronization for high server responsiveness and effective resource allocation}
+        %         \resumeItem{Developed read, write, create, \& delete file system functionalities with crash consistent protocols to ensure data integrity}
         % \resumeItemListEnd
+        
+        \resumeProjectHeading
+              {\textbf{Reminisce - Travel Scrapbook App} $|$ \emph{Kotlin \& Python}}{}
+              \resumeItemListStart
+                \resumeItem{Developed a \textbf{Django}-based backend with \textbf{RESTful APIs}, integrating Google Maps, Spotify, and Weather APIs for improved user engagement with real-time route and weather trackers and music preferences}
+                \resumeItem{Optimized data exchange between a \textbf{Kotlin}-based \textbf{mobile application} and its backend by refining JSON structures and API endpoints, enhancing data retrieval speeds and enabling real-time updates for 100+ data points per user}
+        \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 %-----------EDUCATION-----------
