--- a/Daniel_Dong_Resume_Software_Engineer.tex
+++ b/Daniel_Dong_Resume_Software_Engineer.tex
@@ -160,7 +160,7 @@
 
 %-----------.NET TECHINCAL SKILLS-----------
 \section{Technical Skills} 
-        \textbf{Languages:} \small C\#, JavaScript, SQL, HTML/CSS, Python, Java, TypeScript, C++, Kotlin
+        \textbf{Languages:} \small C\#, Python, JavaScript, SQL, C++, HTML/CSS, Java, TypeScript, Kotlin
         \newline
         \textbf{Frameworks:} \small .NET Core, Entity Framework, Django, React, Vue.js,  Node.js
         \newline
