--- a/Daniel_Dong_Resume_Software_Engineer.tex
+++ b/Daniel_Dong_Resume_Software_Engineer.tex
@@ -112,7 +112,9 @@
     \textbf{\huge \scshape Daniel Dong} \\ \vspace{4pt}
     \small (248) 345-8918 $|$ \href{mailto:dandongyz@gmail.com}{\underline{dandongyz@gmail.com}} $|$
     Chicago, Illinois $|$
-    \href{https://www.linkedin.com/in/dandongyz/}{\underline{https://www.linkedin.com/in/dandongyz/}} 
+    \vspace{0.8em}
+    \href{https://www.linkedin.com/in/dandongyz/}{\underline{https://www.linkedin.com/in/dandongyz/}}
+    \centerline{\textit{\small Backend-Focused Software Engineer experienced in C\#, .NET, and data-driven systems across cloud and modern web platforms.}}
 \end{center}
 %-----------EXPERIENCE-----------
 
@@ -200,8 +202,6 @@
     \resumeSubheading
       {University of Michigan - Ann Arbor}{April 2024}
       {B.S. in Computer Science and Cognitive Science}{}\vspace{10pt}
-        \newline
-        \small \textbf{Relevant Coursework:} \small Data Structures and Algorithms, Web Systems, Operating Systems, Database Management Systems, Machine Learning, Mobile App Development, Computer Vision
   \resumeSubHeadingListEnd
 
           \rule{\linewidth}{0.3pt}
