Remove backend focus from summary

--- a/Daniel_Dong_Resume_Software_Engineer.tex
+++ b/Daniel_Dong_Resume_Software_Engineer.tex
@@ -114,7 +114,7 @@
     Chicago, Illinois $|$
     \vspace{0.8em}
     \href{https://www.linkedin.com/in/dandongyz/}{\underline{https://www.linkedin.com/in/dandongyz/}}
-    \centerline{\textit{\small Backend-Focused Software Engineer experienced in C\#, .NET, and data-driven systems across cloud and modern web platforms.}}
+    \centerline{\textit{\small Software Engineer experienced in C\#, .NET, and data-driven systems across cloud and modern web platforms.}}
 \end{center}
 %-----------EXPERIENCE-----------
 
