Update to Match Job Description

--- a/Daniel_Dong_Resume_Software_Engineer.tex
+++ b/Daniel_Dong_Resume_Software_Engineer.tex
@@ -125,7 +125,8 @@
         \resumeItemListStart
             \resumeItem{Engineered a \textbf{recursive C\# algorithm} distributing \textbf{\$2M/month} across a \$20M+/year bill-sharing program, preventing billing spikes and reducing 300+ support calls monthly}
             \resumeItem{Built an \textbf{automated Bill-Sharing service} processing \textbf{\$200K/month} and 1,000+ bills per run, eliminating 50+ hours of monthly work for Processors}
-            \resumeItem{Delivered production updates and features to a large-scale \textbf{React} application serving 250K+ members for bill management, share tracking, and real-time in-app messaging}
+            \resumeItem{Delivered production updates and features to a large-scale \textbf{React} app backed by \textbf{Entity Framework Core}, and \textbf{LINQ} for real-time data management serving 250K+ members}
+            \resumeItem{Applied \textbf{Test-Driven Development} with \textbf{xUnit} and Clean Code Architecture principles to ensure maintainable APIs and optimized SQL queries across services}
         \resumeItemListEnd 
           
     \resumeProjectHeading
@@ -162,11 +163,11 @@
 
 %-----------.NET TECHINCAL SKILLS-----------
 \section{Technical Skills} 
-        \textbf{Languages:} \small C\#, Python, JavaScript, SQL, C++, HTML/CSS, Java, TypeScript, Kotlin
+        \textbf{Languages:} \small C\#, JavaScript, SQL, HTML/CSS, Python, Java, C++, TypeScript
         \newline
-        \textbf{Frameworks:} \small .NET Core, Entity Framework, Django, React, Vue.js,  Node.js
+        \textbf{Frameworks:} \small .NET Core(8/9), ASP.NET, Entity Framework Core, Django, React, Vue.js,  Node.js
         \newline
-        \textbf{Tools/Platforms:} \small Git, AWS (EC2, S3, RDS, CloudFront), Azure, PostgreSQL, SQLite, Moq, Linux, Visual Studio
+        \textbf{Tools/Platforms:} \small Git, SQL Server, xUnit, Moq, LINQ, AWS EC2, PostgreSQL, SQLite, Linux, Visual Studio
 
 
 %-----------PROJECTS-----------
